--- a/musicsome/public/css/home.css
+++ b/musicsome/public/css/home.css
@@ -1,25 +1,30 @@
-/* table {
-    border-radius: 10px;
-    background-color: gray;
-} */
-
+.row.palylist {
+    background-color: #000411;
+    padding: 20px;
+    width: 50%;
+    border-radius: 6px;
+    margin: auto;
+}
 audio {
-    /* margin-right: auto; */
-    width: 70%;
+    width: 100%;
 }
 .playerbutton.btn.btn-outline-info.list {
     margin: 10px;
 }
 img.musiclist {
-    width: 70px;
+    width: 60px;
+    border: 1px solid black;
 }
 .audio-controller {
     width: fit-content;
     margin: auto;
     margin-bottom: 40px;
-    /* background-color: rgba(179, 218, 255, 0.8); */
+
     border-radius: 6px;
     padding: none;
     padding: 5px;
     box-shadow: 5px 0px 0xp 0.3px gray;
+}
+img.card-img-top-home {
+    width: 60px;
 }
