--- a/musicsome/public/css/layout.css
+++ b/musicsome/public/css/layout.css
@@ -1,7 +1,6 @@
 body,
 html {
-    /* background-image: linear-gradient(black, black); */
-    background-color: #121212 !important;
+    background-color: #d9d9d9 !important;
     font-family: "Big Shoulders Stencil Text", cursive;
 }
 
