--- a/musicsome/public/css/index.css
+++ b/musicsome/public/css/index.css
@@ -1,30 +1,25 @@
-.row.ofSongs {
-    padding: 0;
-    margin: 0;
-}
-
 img {
     width: 100%;
     max-height: 140px;
     max-width: 140px;
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
 }
 .card {
-    width: 70%;
-    height: 100%;
-    background-color: #e6e6e6 !important;
-    padding: 0px 0px 5px 0px;
+    background-color: #bfbfbf !important;
+    padding: 0px 0px 15px 0px;
+
+    height: 170px;
     margin: auto;
-    /* box-shadow: 1px 1px 2px 0.2px gray; */
 }
 .card-body.song-name {
     position: absolute;
-    /* width: 50%; */
+
     text-align: center;
     word-wrap: break-word;
     background-color: rgba(0, 0, 0, 0.7);
     z-index: 5;
-    max-height: 140px;
+
     height: 100%;
     opacity: 0;
     transition: opacity 1s;
@@ -43,7 +38,7 @@ img {
 .player-control {
     position: absolute;
     bottom: 0;
-    right: 43%;
+    left: 35%;
     z-index: 6;
 }
 .add-to-collection {
@@ -51,11 +46,9 @@ img {
     bottom: 0;
     left: 5%;
     color: #669999 !important;
+    z-index: 6;
 }
-/* .col-sm-1.songers {
-     background-color: #e6e6e6; 
-    height: auto;
-} */
+
 .deleteform {
     position: absolute;
     top: 0;
@@ -72,16 +65,14 @@ p {
     color: white;
 }
 .col-sm-1.songers {
-    border-right: 1px solid gray;
-    background-color: #121212;
+    background-color: #1a1a1a;
     padding: 0%;
     min-height: 100vh;
 }
 
 .row.music-type {
     width: 100%;
-    /* padding: 10px; */
-    color: white;
+
     margin: 0;
 }
 h6 {
@@ -92,13 +83,14 @@ h6 {
 }
 
 .btn.category.active {
-    background-color: #39e600;
+    background-color: #000411;
 }
 .row.music-type:hover h5 {
     text-decoration: white;
 }
 .btn.category {
     width: 100%;
+    text-transform: capitalize;
 }
 
 .btn.search {
@@ -108,14 +100,15 @@ h6 {
 .btn.search:hover {
     background-color: #39e600;
 }
-/* .btn.category {
-    background-color: yellow;
-} */
+.btn.category:hover {
+    background-color: rgba(0, 0, 0, 0.7);
+}
 button.vote-to-collection {
     position: absolute;
-    right: 18%;
+    right: 10%;
     bottom: 0;
     color: #ff66a3 !important;
+    z-index: 6;
 }
 
 .sub-button.btn {
@@ -127,4 +120,11 @@ button.vote-to-collection {
 }
 button.vote-to-collection.sub-button.btn.cliked {
     display: none !important;
+}
+span {
+    position: absolute;
+    bottom: 2%;
+    right: 5%;
+    font-size: 14px;
+    color: #0099cc;
 }
