--- a/musicsome/public/css/nav.css
+++ b/musicsome/public/css/nav.css
@@ -1,21 +1,23 @@
 nav {
-    background-color: #121212;
+    background-color: #000411;
     position: fixed;
     border-radius: none;
-    border-bottom: 1px solid gray;
+
+    padding: 0px !important;
+    border-radius: none !important;
+    z-index: 10 !important;
 }
 a.navbar-brand {
-    color: white !important;
-    /* font-family: "Lobster", cursive; */
+    color: #33cc33 !important;
+
     font-weight: 400;
     font-size: 30px;
     padding: 0;
     font-family: "Big Shoulders Stencil Text", cursive;
 }
 nav .navbar-nav li a {
-    color: white !important;
-    font-weight: 400;
-    /* font-family: "Hachi Maru Pop", cursive; */
+    color: #e1efe6 !important;
+    font-weight: 600;
 }
 .navbar {
     -webkit-border-radius: 0;
@@ -25,6 +27,5 @@ nav .navbar-nav li a {
 
 a.nav-link.capital {
     text-transform: uppercase;
-    color: #39e600 !important;
-    /* border: 1px solid white; */
+    color: #33cc33 !important;
 }
